# weather-project

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  Weather_Trading_Overview_May2026.html  main.py  pyproject.toml  test_herbie.py
dashboard/: __init__.py  app.py  data_backtest.py  data_live.py  kalshi_ws.py  sim_python.py  ttl_cache.py
docs/: README.md  backlog.md  chicago_miami_live_precommit.md  chicago_resume_2026-06-07_precommit.md  config_freeze_2026-06-12.md  crontab.txt  cross_city_precommit.md  edge_test_protocol.md  halt_decision_2026-06-06.md  investor_overview.md  live_trading_plan.md  miami_only_amount_precommit.md  miami_resume_2026-06-10_precommit.md
halt/: KORD
migrations/: 001_initial_schema.sql  002_paper_trades.sql  003_live_trades.sql  004_orderbook_snapshots.sql
outputs/: window_sweep_daily.csv  window_sweep_daily_ifs_00z.csv
queries/: forecast_convergence.sql  milestone_forecast_vs_market.sql
scripts/: backfill_ecmwf_early.py  backfill_ecmwf_runs.py  backfill_ecmwf_year_h1.py  backfill_ecmwf_year_h2.py  backfill_gefs.py  backfill_gefs_runs.py  backfill_hrrr_runs.py  backfill_kalshi_contracts.py  backfill_kalshi_prices.py  backfill_may4.py  backfill_observations.py  backfill_paper_trades.py  backfill_paper_trades_equal_weight.py  backfill_paper_trades_lows.py  backfill_polymarket_contracts.py  backfill_year_h1.py  backfill_year_h2.py  backtest_dashboard_renderer.py  backtest_emos_insample.py  backtest_emos_loo.py  backtest_forecast_only.py  backtest_multimodel.py  build_dashboard_components.py  check_kalshi_api.py  check_pipeline_health.py  compare_combined_emos_vs_market.py  compare_emos_vs_market_v2.py  compare_model_vs_market.py  dashboard.py  discover_kalshi_contracts.py  disk_guard.sh  fit_emos_demo.py  ingest_ecmwf_daily.py  ingest_gefs_run.py  ingest_hrrr_daily.py  ingest_observations_daily.py  live_trade.py  (+14 more)
(+69 files in other folders)
