[project]
name = "weather-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "herbie-data>=2026.3.0",
    "psycopg[binary]>=3.2",
    "xarray>=2025.0",
    "cfgrib>=0.9.10",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_markets"]