[project]
name = "weather-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "herbie-data>=2026.3.0",
    "psycopg[binary]>=3.2",
    "xarray>=2025.0",
    "cfgrib>=0.9.10",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "streamlit>=1.57.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_markets"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
